[gd_scene load_steps=35 format=3 uid="uid://c3itcfu05e7gl"]

[ext_resource type="Script" uid="uid://bqo8ov65kwvlq" path="res://menu.gd" id="1_w0s3i"]
[ext_resource type="Texture2D" uid="uid://b6upb5rfdn7jd" path="res://sprites/stamp_click_menu1.png" id="2_ciy7n"]
[ext_resource type="Texture2D" uid="uid://b3tfbmhsdheoi" path="res://sprites/stamp_click_menu2.png" id="3_tnkdk"]
[ext_resource type="Texture2D" uid="uid://cadkwhf68cf10" path="res://sprites/stamp_click_menu3.png" id="4_8o4uf"]
[ext_resource type="Texture2D" uid="uid://6sgg4m24kaqg" path="res://sprites/stamp_click_menu4.png" id="5_j1y2i"]
[ext_resource type="Texture2D" uid="uid://cbee88mvl3h2h" path="res://sprites/stamp_click_menu5.png" id="6_qb2su"]
[ext_resource type="Texture2D" uid="uid://bashinfyokhh" path="res://sprites/start_still1.png" id="10_j1y2i"]
[ext_resource type="Texture2D" uid="uid://bh6geivkja2i7" path="res://sprites/start_still2.png" id="11_qb2su"]
[ext_resource type="Texture2D" uid="uid://bfrt0uxkebc3c" path="res://sprites/start_still3.png" id="12_0wi06"]
[ext_resource type="Texture2D" uid="uid://dmbkwaqiu8v4a" path="res://sprites/start_still4.png" id="13_3i641"]
[ext_resource type="Texture2D" uid="uid://s5iho4gnwdky" path="res://sprites/start_still5.png" id="14_5wodf"]
[ext_resource type="Texture2D" uid="uid://e4bwwlf0rebq" path="res://sprites/start_still6.png" id="15_m2708"]
[ext_resource type="Texture2D" uid="uid://b04rn2gncpmx3" path="res://sprites/start_hover1.png" id="16_lwl3b"]
[ext_resource type="Texture2D" uid="uid://bcb5j632d2ysf" path="res://sprites/start_hover2.png" id="17_t1ows"]
[ext_resource type="Texture2D" uid="uid://du4nahfa86bu2" path="res://sprites/start_hover3.png" id="18_5xags"]
[ext_resource type="Texture2D" uid="uid://bk76vaw4iaqal" path="res://sprites/stamp_click_menu6.png" id="19_8lmdq"]
[ext_resource type="Texture2D" uid="uid://b4jvtafnkw4s8" path="res://sprites/start_hover4.png" id="19_wyyhw"]
[ext_resource type="Texture2D" uid="uid://cwnaxjl4bah04" path="res://sprites/start_hover5.png" id="20_gyv6s"]
[ext_resource type="Texture2D" uid="uid://5x5nlxa4h37x" path="res://sprites/start_hover6.png" id="21_g8u3f"]
[ext_resource type="Texture2D" uid="uid://d8xirhray43p" path="res://sprites/exit_still1.png" id="30_ay07r"]
[ext_resource type="Texture2D" uid="uid://pah04tqwtjck" path="res://sprites/exit_still2.png" id="31_5yl2w"]
[ext_resource type="Texture2D" uid="uid://dsoulkph6efog" path="res://sprites/exit_still3.png" id="32_f82t3"]
[ext_resource type="Texture2D" uid="uid://bfh4jc0u8iq0p" path="res://sprites/exit_still4.png" id="33_g7tms"]
[ext_resource type="Texture2D" uid="uid://r38da10mprt4" path="res://sprites/exit_still5.png" id="34_65flr"]
[ext_resource type="Texture2D" uid="uid://dl6jkjowagn0x" path="res://sprites/exit_still6.png" id="35_sowed"]
[ext_resource type="Texture2D" uid="uid://cc1uwsnwr82f2" path="res://sprites/exit_hover1.png" id="36_s0svo"]
[ext_resource type="Texture2D" uid="uid://c7odlx1gn4t2r" path="res://sprites/exit_hover2.png" id="37_r8j3e"]
[ext_resource type="Texture2D" uid="uid://banoge7h0ft2a" path="res://sprites/exit_hover3.png" id="38_leosr"]
[ext_resource type="Texture2D" uid="uid://dr1jrkat0icbc" path="res://sprites/exit_hover4.png" id="39_4vouk"]
[ext_resource type="Texture2D" uid="uid://xjfoenkuaolr" path="res://sprites/exit_hover5.png" id="40_iqdwd"]
[ext_resource type="Texture2D" uid="uid://bevi35eomaxni" path="res://sprites/exit_hover6.png" id="41_xm076"]
[ext_resource type="Texture2D" uid="uid://dqimiocy47o4s" path="res://sprites/name.png" id="42_3kqnc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ftmlt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ciy7n")
}, {
"duration": 1.0,
"texture": ExtResource("3_tnkdk")
}, {
"duration": 1.0,
"texture": ExtResource("4_8o4uf")
}, {
"duration": 1.0,
"texture": ExtResource("5_j1y2i")
}, {
"duration": 1.0,
"texture": ExtResource("6_qb2su")
}, {
"duration": 1.0,
"texture": ExtResource("19_8lmdq")
}, {
"duration": 1.0,
"texture": ExtResource("10_j1y2i")
}],
"loop": false,
"name": &"clicar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_j1y2i")
}, {
"duration": 1.0,
"texture": ExtResource("11_qb2su")
}, {
"duration": 1.0,
"texture": ExtResource("12_0wi06")
}, {
"duration": 1.0,
"texture": ExtResource("13_3i641")
}, {
"duration": 1.0,
"texture": ExtResource("14_5wodf")
}, {
"duration": 1.0,
"texture": ExtResource("15_m2708")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_lwl3b")
}, {
"duration": 1.0,
"texture": ExtResource("17_t1ows")
}, {
"duration": 1.0,
"texture": ExtResource("18_5xags")
}, {
"duration": 1.0,
"texture": ExtResource("19_wyyhw")
}, {
"duration": 1.0,
"texture": ExtResource("20_gyv6s")
}, {
"duration": 1.0,
"texture": ExtResource("21_g8u3f")
}],
"loop": true,
"name": &"passando",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_qrf1l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ciy7n")
}, {
"duration": 1.0,
"texture": ExtResource("3_tnkdk")
}, {
"duration": 1.0,
"texture": ExtResource("4_8o4uf")
}, {
"duration": 1.0,
"texture": ExtResource("5_j1y2i")
}, {
"duration": 1.0,
"texture": ExtResource("6_qb2su")
}, {
"duration": 1.0,
"texture": ExtResource("19_8lmdq")
}, {
"duration": 1.0,
"texture": ExtResource("30_ay07r")
}],
"loop": false,
"name": &"clicar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_ay07r")
}, {
"duration": 1.0,
"texture": ExtResource("31_5yl2w")
}, {
"duration": 1.0,
"texture": ExtResource("32_f82t3")
}, {
"duration": 1.0,
"texture": ExtResource("33_g7tms")
}, {
"duration": 1.0,
"texture": ExtResource("34_65flr")
}, {
"duration": 1.0,
"texture": ExtResource("35_sowed")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_s0svo")
}, {
"duration": 1.0,
"texture": ExtResource("37_r8j3e")
}, {
"duration": 1.0,
"texture": ExtResource("38_leosr")
}, {
"duration": 1.0,
"texture": ExtResource("39_4vouk")
}, {
"duration": 1.0,
"texture": ExtResource("40_iqdwd")
}, {
"duration": 1.0,
"texture": ExtResource("41_xm076")
}],
"loop": true,
"name": &"passando",
"speed": 5.0
}]

[node name="Menu" type="Node2D"]
position = Vector2(555, 292)
script = ExtResource("1_w0s3i")

[node name="BotaoInicio" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -50.0
offset_right = 125.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
flat = true
metadata/_edit_use_anchors_ = true

[node name="BotaoInicioAnimacao" type="AnimatedSprite2D" parent="BotaoInicio"]
texture_filter = 1
position = Vector2(125, 50)
sprite_frames = SubResource("SpriteFrames_ftmlt")
animation = &"normal"
autoplay = "normal"
speed_scale = 2.5

[node name="BotaoSair" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 94.0
offset_right = 125.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
flat = true
metadata/_edit_use_anchors_ = true

[node name="BotaoSairAnimacao" type="AnimatedSprite2D" parent="BotaoSair"]
texture_filter = 1
position = Vector2(126, 50)
sprite_frames = SubResource("SpriteFrames_qrf1l")
animation = &"normal"
autoplay = "normal"
speed_scale = 2.5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(11, -152)
texture = ExtResource("42_3kqnc")

[connection signal="animation_finished" from="BotaoInicio/BotaoInicioAnimacao" to="." method="_on_botao_inicio_animacao_animation_finished"]
[connection signal="animation_finished" from="BotaoSair/BotaoSairAnimacao" to="." method="_on_botao_sair_animacao_animation_finished"]
